# qtdroid

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
cmake/: AndroidManifest.xml.in  android.cmake  log-sample.txt  qtdeploy-sample.json  qtdeploy.json.in
puzzle/: CMakeLists.txt  puzzle.qrc
puzzle/android/: qtdeploy.json.in
puzzle/data/: puzzle.qrc
puzzle/src/: main.cpp  mainwindow.cpp  pieceslist.cpp  puzzlewidget.cpp
